feat: DTO layer, duplicate alias guard, server-side BB calc, Testcontainers
- Add FacilityDto, LpDto, FmBlocklistEntryDto, FmSuggestionDto; all facility/LP/field-mapping endpoints now return DTOs instead of JPA entities
- Move ResourceNotFoundException to exception/ package; add GlobalExceptionHandler with @RestControllerAdvice
- Add 409 Conflict guard in FieldMappingController when creating or updating a duplicate alias text
- Compute agentBBFmt and pctBBFmt server-side in SubmissionController (uncalled × agent rate, % of total facility BB)
- Expand CANONICAL_META with Eligibility Flag, Recallable Distributions, BB-level fields, Excess Concentration, and numeric rating fields
- Add isDerived flag to FmCanonicalField; add findByAliasTextIgnoreCase to FmAliasRepository
- Add Testcontainers dependencies (spring-boot-testcontainers, postgresql, junit-jupiter) and integration test scaffolding
- docs: add /api/config section, remove stale /api/matching/thresholds entries, remove non-existent EAR report endpoint

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>